[package]
name = "iconv-sys"
description = "iconv bindings for Rust"
version = "0.1.1"
authors = ["Stuart Zhang<stuartpage@qq.com>"]
repository = "https://github.com/stuartZhang/rust-iconv"
license = "MIT"
keywords = ["iconv", "encoding"]
edition = "2021"
publish = ["crates-io"]

[dependencies]
libc = "0.2.97"
dyn_buf = "0.1.0"
