[package]
authors = ["stuart_zhang <stuartpage@qq.com>"]
categories = ["API bindings", "External FFI bindings", "Operating systems", "Text processing"]
description = "iconv bindings for Rust"
edition = "2021"
keywords = ["iconv", "encoding"]
license = "MIT"
name = "iconv-compat-win-sys"
version = "0.1.1"
repository = "https://github.com/stuartZhang/rust-iconv"

[dependencies]
libc = "0.2.97"
dyn_buf = "0.1.0"
